[package]
name = "doip2http"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.18"
log = "0.4"
env_logger = "0.11"

[[bin]]
name = 'axum-demo'
path = "src/demo/axum.rs"

[[bin]]
name = 'doip2http'
path = "src/main.rs"
